# sensei-client

./: .env.example  .gitignore  FALSIFICATION_REPORT.md  INSTALL.md  README.md  pyproject.toml
advisories/: SENSEI_v0.3_advisory.md
contract/: SENSEI_Contract_v0.3.md
herald_sensei/: README.md  __init__.py  materiality.py  wiring.py
sensei_adapters/avt_extractor/: README.md  avt_extractor.v1.json  avt_materiality.py
sensei_adapters/herald/: adapter.py  herald.v1.json  herald_materiality.py
sensei_client/: INTEGRATION.md  __init__.py  advisor.py  client.py  config.py  exceptions.py  guard.py  types.py
setup/: M1.md  M2.md  M3.md  README.md  bootstrap.sh
tests/: e2e_smoke.py
